--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 import React, { useState, useEffect, useMemo, useCallback } from "react";
+import axios from "axios";
 import { DataGrid } from "@mui/x-data-grid";
 import {
   FormControl,
@@ -11,15 +12,13 @@ import {
 } from "@mui/material";
 import { ExpandMore, ChevronRight } from "@mui/icons-material";
 
-// Secure API Fetch Function
+// Secure API Fetch Function with Axios
 const fetchCSFScopeData = async () => {
   try {
-    const response = await fetch("/api/v1/GetCSFScopeData", {
-      method: "GET",
+    const response = await axios.get("/api/v1/GetCSFScopeData", {
       headers: { "Content-Type": "application/json" },
     });
-    if (!response.ok) throw new Error("Failed to fetch data");
-    return await response.json();
+    return response.data;
   } catch (error) {
     console.error("Error fetching CSF Scope data:", error);
     return [];
@@ -31,39 +30,40 @@ const CSFScopeTable = () => {
   const [expandedRows, setExpandedRows] = useState({}); // Track expanded/collapsed rows
   const [loading, setLoading] = useState(true);
 
-  // Fetch and process data securely
+  // Fetch data securely using Axios
   useEffect(() => {
     let isMounted = true;
     fetchCSFScopeData().then((data) => {
       if (isMounted) {
-        const formattedData = formatTableData(data);
-        setTableData(formattedData);
+        setTableData(formatTableData(data));
         setLoading(false);
       }
     });
     return () => (isMounted = false); // Prevent memory leaks
   }, []);
 
-  // Convert API response from .NET Core (lowercase keys) to React-compatible naming
-  const normalizeApiData = useMemo(() => (data) =>
-    data.map((item) => ({
-      subcategoryId: item.subcategoryId,
-      subcategoryName: item.subcategoryName,
-      subcategoryDescription: item.subcategoryDescription,
-      relatedCsf1_1Subcategories: item.relatedCsf1_1Subcategories,
-      businessUnitName: item.businessUnitName,
-      businessUnitAbbreviation: item.businessUnitAbbreviation,
-      auditorIsInScope: item.auditorIsInScope,
-      auditorJustification: item.auditorJustification,
-      auditorProfileType: item.auditorProfileType,
-      auditorConsumingFromBusinessUnit: item.auditorConsumingFromBusinessUnit,
-      subcatOwnerAcceptRecommendation: item.subcatOwnerAcceptRecommendation,
-      subcatOwnerIsInScope: item.subcatOwnerIsInScope,
-      subcatOwnerJustification: item.subcatOwnerJustification,
-      subcatOwnerProfileType: item.subcatOwnerProfileType,
-      subcatOwnerConsumingFromBusinessUnit: item.subcatOwnerConsumingFromBusinessUnit,
-    }))
-  , []);
+  // Convert .NET Core's JSON keys (lowercase) to React-friendly camelCase
+  const normalizeApiData = useMemo(
+    () => (data) =>
+      data.map((item) => ({
+        subcategoryId: item.subcategoryId,
+        subcategoryName: item.subcategoryName,
+        subcategoryDescription: item.subcategoryDescription,
+        relatedCsf1_1Subcategories: item.relatedCsf1_1Subcategories,
+        businessUnitName: item.businessUnitName,
+        businessUnitAbbreviation: item.businessUnitAbbreviation,
+        auditorIsInScope: item.auditorIsInScope,
+        auditorJustification: item.auditorJustification,
+        auditorProfileType: item.auditorProfileType,
+        auditorConsumingFromBusinessUnit: item.auditorConsumingFromBusinessUnit,
+        subcatOwnerAcceptRecommendation: item.subcatOwnerAcceptRecommendation,
+        subcatOwnerIsInScope: item.subcatOwnerIsInScope,
+        subcatOwnerJustification: item.subcatOwnerJustification,
+        subcatOwnerProfileType: item.subcatOwnerProfileType,
+        subcatOwnerConsumingFromBusinessUnit: item.subcatOwnerConsumingFromBusinessUnit,
+      })),
+    []
+  );
 
   // Memoized Data Processing (Prevents Unnecessary Recomputations)
   const formatTableData = useMemo(() => (data) => {
